--- a/HappyHealthy/Resources/layout/history_doc.axml
+++ b/HappyHealthy/Resources/layout/history_doc.axml
@@ -8,6 +8,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp">
         <TextView
+            android:id="@+id/his_doc_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="วันที่นัดแพทย์ : "
+            android:textColor="#3a3a3a"
+            android:textIsSelectable="false"
+            android:textSize="14dp"
+            android:layout_marginLeft="70dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp" />
+        <TextView
             android:id="@+id/his_doc_name"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -15,7 +26,7 @@
             android:textColor="#3a3a3a"
             android:textIsSelectable="false"
             android:textSize="14dp"
-            android:layout_marginLeft="70dp"
+            android:layout_marginLeft="0.0dp"
             android:textStyle="bold"
             android:layout_marginTop="10dp" />
     </LinearLayout>
@@ -26,6 +37,15 @@
         android:layout_marginTop="27dp"
         android:layout_marginRight="5dp"
         android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="รายละเอียด : "
+            android:textColor="#3a3a3a"
+            android:id="@+id/his_doc_detail"
+            android:textSize="13dp"
+            android:layout_marginTop="4dp"
+            android:gravity="center" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
