--- a/HappyHealthy/Resources/layout/history_pill.axml
+++ b/HappyHealthy/Resources/layout/history_pill.axml
@@ -2,11 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#dfe4ea">
+    android:background="#ffffff">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp">
+        <TextView
+            android:id="@+id/pill_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ชื่อยา : "
+            android:textIsSelectable="false"
+            android:textSize="14dp"
+            android:layout_marginLeft="70dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:textColor="#3a3a3a" />
         <TextView
             android:id="@+id/his_pill_name"
             android:layout_width="150dp"
@@ -14,7 +25,7 @@
             android:text="ชื่อยา"
             android:textIsSelectable="false"
             android:textSize="14dp"
-            android:layout_marginLeft="70dp"
+            android:layout_marginLeft="0.0dp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:textColor="#3a3a3a" />
@@ -26,6 +37,16 @@
         android:layout_marginTop="27dp"
         android:layout_marginRight="5dp"
         android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="รายละเอียดยา : "
+            android:textColor="#3a3a3a"
+            android:id="@+id/pill_desc"
+            android:textSize="13dp"
+            android:textStyle="bold"
+            android:layout_marginTop="4dp"
+            android:gravity="center" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
