--- a/HappyHealthy/Resources/layout/activity_report.axml
+++ b/HappyHealthy/Resources/layout/activity_report.axml
@@ -4,34 +4,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#dfe4ea">
-    <LinearLayout
-        android:id="@+id/container_toolbar"
-        android:layout_width="match_parent"
+  <LinearLayout
+      android:id="@+id/container_toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+    <TextView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:text="@string/ckd_prompt" />
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/ckd_prompt" />
-        <TextView
-            android:id="@+id/reportStatus"
-            android:textSize="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="null"
-            android:textColor="#000000"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:textStyle="bold" />
-        <OxyPlot.Xamarin.Android.PlotView
-            android:id="@+id/plot_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+        android:layout_marginTop="10dip"
+        android:text="@string/ckd_prompt" />
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:prompt="@string/ckd_prompt" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:text="@string/ckd_field" />
+    <Spinner
+        android:id="@+id/spinnerField"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:prompt="@string/ckd_field" />
+    <TextView
+        android:id="@+id/reportStatus"
+        android:textSize="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="null"
+        android:textColor="#000000"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:textStyle="bold" />
+    <OxyPlot.Xamarin.Android.PlotView
+        android:id="@+id/plot_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+  </LinearLayout>
 </RelativeLayout>
