--- a/HappyHealthy/Resources/layout/activity_history_pill.axml
+++ b/HappyHealthy/Resources/layout/activity_history_pill.axml
@@ -7,12 +7,11 @@
     tools:context="com.jiraporn.nut.happyhealthy.History_Food">
     <LinearLayout
         android:id="@+id/container_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbarpill_history" />
+            layout="@layout/toolbarpill_history"/>
     </LinearLayout>
     <ListView
         android:layout_width="fill_parent"
