--- a/HappyHealthy/Resources/layout/activity_home.axml
+++ b/HappyHealthy/Resources/layout/activity_home.axml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#dfe4ea">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -19,13 +20,12 @@
             android:textSize="20dp"
             android:textStyle="bold" />
         <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:rowCount="3"
             android:columnCount="2"
-            android:orientation="vertical"
             android:layout_marginTop="40.0dp"
-            android:layout_centerVertical="true">
+            android:layout_centerHorizontal="true">
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
@@ -35,7 +35,7 @@
                 android:layout_weight="1"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:layout_marginLeft="30.0dp"
+                android:layout_marginLeft="0.0dp"
                 android:layout_marginTop="30.0dp"
                 android:layout_marginBottom="20.0dp" />
             <ImageView
@@ -47,7 +47,7 @@
                 android:layout_weight="1"
                 android:layout_row="2"
                 android:layout_column="0"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="0.0dp"
                 android:layout_marginTop="0.0dp"
                 android:layout_marginBottom="0.0dp" />
             <ImageView
@@ -59,7 +59,7 @@
                 android:layout_weight="1"
                 android:layout_row="1"
                 android:layout_column="0"
-                android:layout_marginLeft="30.0dp"
+                android:layout_marginLeft="0.0dp"
                 android:layout_marginBottom="20.0dp" />
             <ImageView
                 android:layout_width="150dp"
