--- a/HappyHealthy/Resources/layout/toolbardiabetes_history.axml
+++ b/HappyHealthy/Resources/layout/toolbardiabetes_history.axml
@@ -13,24 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
+      <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:id="@+id/imageView38"
             android:src="@drawable/arowback"
-            android:layout_marginTop="0.0dp"
-            android:layout_marginLeft="3dp"
             android:layout_alignParentLeft="true"
             android:layout_gravity="center_vertical" />
         <TextView
-            android:layout_width="290.0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ประวัติบันทึกเบาหวาน"
             android:id="@+id/textView_header_name_diabetes"
-            android:layout_centerHorizontal="true"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:layout_marginTop="0.0dp"
+            android:layout_centerInParent="true"
             android:layout_gravity="center_vertical"
             android:textColor="#ffffff"
             android:gravity="center" />
@@ -39,9 +40,8 @@
             android:layout_height="35dp"
             android:id="@+id/ClickAddDia"
             android:src="@drawable/buttonadd"
-            android:layout_marginTop="0.0dp"
-            android:layout_marginRight="0.0dp"
             android:layout_gravity="center_vertical"
-            android:verticalScrollbarPosition="right" />
+            android:layout_alignParentRight="true"/>
+      </RelativeLayout>
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
