--- a/HappyHealthy/Resources/layout/toolbarpill_history.axml
+++ b/HappyHealthy/Resources/layout/toolbarpill_history.axml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
     android:background="#29297c"
@@ -10,38 +10,36 @@
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     <LinearLayout
         android:id="@+id/container_toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical">
+        android:gravity="left">
+      <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:id="@+id/imageViewbackpill"
             android:src="@drawable/arowback"
-            android:layout_marginTop="0.0dp"
-            android:layout_marginLeft="3dp"
-            android:layout_alignParentLeft="true"
-            android:layout_gravity="center_vertical" />
+            android:layout_alignParentLeft="true"/>
         <TextView
-            android:layout_width="290.0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ประวัติบันทึกยา"
             android:id="@+id/textView_header_name_pill"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_vertical"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:layout_marginTop="0.0dp"
-            android:layout_gravity="center_vertical"
             android:textColor="#ffffff"
-            android:gravity="center" />
+            android:layout_centerInParent="true" />
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:id="@+id/imageViewAddPill"
             android:src="@drawable/buttonadd"
-            android:layout_marginTop="0.0dp"
-            android:layout_marginRight="0.0dp"
             android:layout_gravity="center_vertical"
-            android:verticalScrollbarPosition="right" />
+            android:layout_alignParentRight="true"/>
+      </RelativeLayout>
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
