--- a/HappyHealthy/Resources/layout/activity_login.axml
+++ b/HappyHealthy/Resources/layout/activity_login.axml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="เข้าสู่ระบบ"
             android:layout_centerHorizontal="true"
             android:textSize="25.5dp"
             android:textStyle="bold"
