--- a/HappyHealthy/Resources/layout/activity_diabetes.axml
+++ b/HappyHealthy/Resources/layout/activity_diabetes.axml
@@ -62,12 +62,6 @@
                 android:layout_marginLeft="0.0dp"
                 android:gravity="center_vertical|center_horizontal"
                 android:background="@drawable/my_box_dis" />
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="30dp"
-                android:id="@+id/ic_microphone_diabetes"
-                android:src="@drawable/ic_microphone"
-                android:layout_marginLeft="6.0dp" />
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -82,13 +76,91 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10.0dp" />
     </LinearLayout>
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="45dp"
-        android:id="@+id/imageView_button_save_diabetes"
-        android:src="@drawable/save_button"
-        android:layout_below="@+id/Layout_background_diabetes"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10.0dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="220dp"
+        android:id="@+id/Layout_background_diabetes"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ระดับน้ำตาลสะสมในเลือด (ไม่บังคับ)"
+                android:id="@+id/textView_detail_sugar_diabetes"
+                android:layout_centerHorizontal="true"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="#3a3a3a"
+                android:gravity="center_vertical" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:weightSum="1"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="20.0dp">
+            <EditText
+                android:layout_width="160dp"
+                android:layout_height="match_parent"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/sugar_sum_value"
+                android:textColor="#6f6f6f"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:text="0"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="0.0dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:background="@drawable/my_box_dis" />
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="มก./ดล."
+            android:id="@+id/unit_sum_dia"
+            android:layout_centerHorizontal="true"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            android:textColor="#3a3a3a"
+            android:gravity="fill_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10.0dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="370dp"
+        android:id="@+id/Layout_background_save_diabetes"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:id="@+id/ic_microphone_diabetes"
+            android:src="@drawable/ic_microphone"
+            android:layout_marginLeft="20.0dp" />
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="45dp"
+            android:id="@+id/imageView_button_save_diabetes"
+            android:src="@drawable/save_button"
+            android:layout_below="@+id/Layout_background_diabetes"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10.0dp" />
+    </LinearLayout>
 </RelativeLayout>
