--- a/HappyHealthy/Resources/layout/activity_diabetes.axml
+++ b/HappyHealthy/Resources/layout/activity_diabetes.axml
@@ -141,26 +141,25 @@
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_width="wrap_content"
         android:layout_marginTop="370dp"
         android:id="@+id/Layout_background_save_diabetes"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="45dp"
+            android:id="@+id/imageView_button_save_diabetes"
+            android:src="@drawable/save_button"
+            android:layout_below="@+id/Layout_background_diabetes" />
         <ImageView
             android:layout_width="20dp"
             android:layout_height="30dp"
             android:id="@+id/ic_microphone_diabetes"
             android:src="@drawable/ic_microphone"
-            android:layout_marginLeft="20.0dp" />
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="45dp"
-            android:id="@+id/imageView_button_save_diabetes"
-            android:src="@drawable/save_button"
-            android:layout_below="@+id/Layout_background_diabetes"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10.0dp" />
+            android:layout_marginRight="0.0dp"
+            android:layout_marginTop="5.5dp"
+            android:layout_marginLeft="10.0dp" />
     </LinearLayout>
 </RelativeLayout>
