--- a/HappyHealthy/Resources/layout/activity_pressure.axml
+++ b/HappyHealthy/Resources/layout/activity_pressure.axml
@@ -171,12 +171,6 @@
                 android:layout_marginLeft="0.0dp"
                 android:gravity="center_vertical|center_horizontal"
                 android:textStyle="bold" />
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="30dp"
-                android:id="@+id/ic_microphone_pressure"
-                android:src="@drawable/ic_microphone"
-                android:layout_marginLeft="6.0dp" />
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -191,13 +185,28 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10.0dp" />
     </LinearLayout>
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="45dp"
-        android:id="@+id/imageView_button_save_pressure"
-        android:src="@drawable/save_button"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:id="@+id/linear_button_pressure"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/Layout_background_pressure"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10.0dp" />
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10.0dp">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:id="@+id/imageView_button_save_pressure"
+            android:src="@drawable/save_button"
+            android:layout_gravity="center_horizontal" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="30dp"
+            android:id="@+id/ic_microphone_pressure"
+            android:src="@drawable/ic_microphone"
+            android:layout_marginRight="0.0dp"
+            android:layout_marginTop="5.5dp"
+            android:layout_marginLeft="10.0dp" />
+    </LinearLayout>
 </RelativeLayout>
